rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__df_string_boolean_comparison.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT TRUE = 't' t, FALSE <> 'f' f;\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+------+-------+
| t    | f     |
+------+-------+
| true | false |
+------+-------+
