rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__discard_postgres_all.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"DISCARD ALL;\".to_string(), DatabaseProtocol::PostgreSQL).await?"
---

