rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__discard_postgres_plans.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"DISCARD PLANS;\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---

