rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__discard_postgres_temporary.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"DISCARD TEMPORARY;\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---

